--- a/cloud-ops-ui/app/templates/layouts/default.html
+++ b/cloud-ops-ui/app/templates/layouts/default.html
@@ -56,11 +56,11 @@
             <a class="header-logo" href="javascript:;">云海IOP升级中心</a>
         </h2>
         <ul id="side-bar" class="sidebar-nav nav" role="navigation" tabindex="1">
-            <li index="1" class="active">
+            <!--<li index="1" class="active">
                 <a href="{{getUrl('/home')}}" data-reload="true">
                     <i class="fa fa-desktop"></i>总览
                 </a>
-            </li>
+            </li>-->
             <li index="2" id="location-li">
                 <a data-reload="true" href="{{getUrl('/location')}}">
                     <i class="fa fa-server"></i>环境管理
@@ -71,11 +71,11 @@
                     <i class="fa fa-cubes"></i>模板配置
                 </a>
             </li>
-            <li index="4" id="repository-li">
+            <!--<li index="4" id="repository-li">
                 <a data-reload="true" href="{{getUrl('/repository')}}">
                     <i class="fa fa-clone"></i>仓库管理
                 </a>
-            </li>
+            </li>-->
 
             <li index="7">
                 <a class="nav-first-level" href="javascript:;">
@@ -90,33 +90,6 @@
                     <li index="72">
                         <a href="{{getUrl('/sysmanagement/logs')}}" data-reload="true">
                             <i class="fa fa-dot fa-w"></i>操作日志
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li index="8" id="apigateway-li">
-                <a class="nav-first-level" href="javascript:;">
-                    <i class="fa fa-server"></i>API网关<i class="fa icon-arrow"></i>
-                </a>
-                <ul class="nav-second-level nav">
-                    <li index="81">
-                        <a href="{{getUrl('/apigateway/group')}}" data-reload="true">
-                            <i class="fa fa-dot fa-w"></i>组
-                        </a>
-                    </li>
-                    <li index="82">
-                        <a href="{{getUrl('/apigateway/version')}}" data-reload="true">
-                            <i class="fa fa-dot fa-w"></i>版本
-                        </a>
-                    </li>
-                    <li index="83">
-                        <a href="{{getUrl('/apigateway/api')}}" data-reload="true">
-                            <i class="fa fa-dot fa-w"></i>API列表
-                        </a>
-                    </li>
-                    <li index="84">
-                        <a href="{{getUrl('/apigateway/auth')}}" data-reload="true">
-                            <i class="fa fa-dot fa-w"></i>API授权
                         </a>
                     </li>
                 </ul>
