--- a/cloud-ops-ui/app/templates/environment.html
+++ b/cloud-ops-ui/app/templates/environment.html
@@ -1,4 +1,4 @@
-<!--<div class="page-header">
+<div class="page-header">
     <div class="page-title">
         <h3>环境管理</h3>
         <em>environment manage</em>
@@ -6,7 +6,7 @@
     <div class="page-desc">
         <p>环境管理，针对不同的环境提供代码包的管理和升级操作的功能。</p>
     </div>
-</div>-->
+</div>
 <div class="page-body">
     <div class="row home-summaries-row">
         {{each locations as applicationEnvironment}}
