--- a/cloud-ops-ui/app/templates/environment/application/add.html
+++ b/cloud-ops-ui/app/templates/environment/application/add.html
@@ -2,14 +2,14 @@
     <div class="form-group form-required">
         <label for="name" class="control-label col-sm-3">名称：</label>
 
-        <div class="col-sm-7">
+        <div class="col-sm-8">
             <input type="text" class="form-control" id="name" name="name">
         </div>
     </div>
     <div class="form-group form-required">
-        <label for="topologyId" class="control-label col-sm-3">拓扑：</label>
+        <label for="topologyId" class="control-label col-sm-3">模板：</label>
 
-        <div class="col-sm-7">
+        <div class="col-sm-8">
             <select class="form-control" id="topologyId" name="topologyId">
                 {{each topologies as t}}
                 <option value="{{t.id}}">{{t.name}}</option>
@@ -17,18 +17,5 @@
             </select>
         </div>
     </div>
-    {{ each hosts as host}}
-    <div class="form-group">
-        <label class="sr-only" for="user">user</label>
-        <input type="email" class="form-control" id="user" placeholder="用户名">
-    </div>
-    <div class="form-group">
-        <label class="sr-only" for="password">Password</label>
-        <input type="password" class="form-control" id="password" placeholder="密码">
-    </div>
-    <div class="form-group">
-        <label class="sr-only" for="password">hosts</label>
-        <input type="password" class="form-control" id="hosts" placeholder="IP">
-    </div>
-    {{/each}}
+    <div id="location"></div>
 </form>
