--- a/cloud-ops-ui/app/templates/environment/application/detail/package.html
+++ b/cloud-ops-ui/app/templates/environment/application/detail/package.html
@@ -3,8 +3,8 @@
         <div class="pull-left">
             <a class="btn btn-reload"></a>
             <a class="btn btn-add">新建</a>
-            <a class="btn"><i class="fa fa-code-fork"></i>Remote</a>
-            <a class="btn"><i class="fa fa-long-arrow-down"></i>pull</a>
+            <a class="btn btn-primary"><i class="fa fa-code-fork"></i>Remote</a>
+            <a class="btn btn-primary"><i class="fa fa-long-arrow-down"></i>pull</a>
         </div>
         <div class="pull-right">
             <label>
