add package logic and page

--- a/cloud-ops-ui/app/templates/environment/application/detail/summary.html
+++ b/cloud-ops-ui/app/templates/environment/application/detail/summary.html
@@ -8,28 +8,28 @@
         </div>
         <div class="panel-body">
             <div class="form-group">
-                <label class="control-label col-em-6">应 用 I D：</label>
+                <label class="control-label col-em-12">ID：</label>
 
                 <div class="col-em-offset-6">
                     <p class="form-control-static">{{topology.id}}</p>
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-em-6">应用名称：</label>
+                <label class="control-label col-em-12">名称：</label>
 
                 <div class="col-em-offset-6">
                     <p class="form-control-static" id="name">{{topology.name}}</p>
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-em-6">模板名称：</label>
+                <label class="control-label col-em-12">模板：</label>
 
                 <div class="col-em-offset-6">
                     <p class="form-control-static">{{topology.topologyName}}</p>
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-em-6">创建时间：</label>
+                <label class="control-label col-em-12">创建时间：</label>
 
                 <div class="col-em-offset-6">
                     <p class="form-control-static">{{topology.createdAt}}</p>
