--- a/cloud-ops-ui/app/templates/environment/application/detail/package.html
+++ b/cloud-ops-ui/app/templates/environment/application/detail/package.html
@@ -2,9 +2,9 @@
     <div class="table-top clearfix">
         <div class="pull-left">
             <a class="btn btn-reload"></a>
-            <a class="btn btn-add">新建</a>
-            <a class="btn btn-primary"><i class="fa fa-code-fork"></i>Remote</a>
-            <a class="btn btn-primary"><i class="fa fa-long-arrow-down"></i>pull</a>
+            <a class="btn btn-primary btn-config"><i class="fa fa-code-fork"></i>配置</a>
+            <a class="btn btn-primary btn-war"><i class="fa fa-long-arrow-down"></i>全量包</a>
+            <a class="btn btn-primary btn-patch"><i class="fa fa-files-o"></i>增量包</a>
         </div>
         <div class="pull-right">
             <label>
