--- a/cloud-ops-ui/app/templates/environment/application/detail/package/config.html
+++ b/cloud-ops-ui/app/templates/environment/application/detail/package/config.html
@@ -3,7 +3,7 @@
         <label for="gitUrl" class="control-label col-sm-3">git库：</label>
 
         <div class="col-sm-7">
-            <input type="text" class="form-control" id="gitUrl" name="gitUrl" value="{{gitUrl}}">
+            <input type="text" class="form-control" id="gitUrl" name="gitUrl" value="{{gitUrl || 'http://gitserver/iop/xxx.git'}}">
         </div>
     </div>
     <div class="form-group form-required">
@@ -36,14 +36,14 @@
         <label for="build" class="control-label col-sm-3">构建命令：</label>
 
         <div class="col-sm-7">
-            <textarea class="form-control" id="build" name="build">{{build}}</textarea>
+            <textarea class="form-control" id="build" name="build">{{build || 'gradlew warForServers -Pstage=pro -Pprofile=xxx -Pdate=201710201 --refresh-dependencies'}}</textarea>
         </div>
     </div>
     <div class="form-group form-required">
         <label for="buildDir" class="control-label col-sm-3">构建目录：</label>
 
         <div class="col-sm-7">
-            <input type="text" class="form-control" id="buildDir" name="buildDir" value="{{buildDir}}">
+            <input type="text" class="form-control" id="buildDir" name="buildDir" value="{{buildDir || 'build/deploy/xxx/libs'}}">
         </div>
     </div>
 </form>
