--- a/cloud-ops-ui/app/templates/environment/application/detail/package/patch.html
+++ b/cloud-ops-ui/app/templates/environment/application/detail/package/patch.html
@@ -5,7 +5,7 @@
         <div class="col-sm-7">
             <select class="form-control" name="prePackageId">
                 {{each $data as pkg}}
-                {{if pkg.warPath}}
+                {{if pkg.warPath && pkg.type == "WarFile"}}
                 <option value="{{pkg.id}}">{{pkg.version}}</option>
                 {{/if}}
                 {{/each}}
@@ -18,7 +18,7 @@
         <div class="col-sm-7">
             <select class="form-control" name="nextPackageId">
                 {{each $data as pkg}}
-                {{if pkg.warPath}}
+                {{if pkg.warPath && pkg.type == "WarFile"}}
                 <option value="{{pkg.id}}">{{pkg.version}}</option>
                 {{/if}}
                 {{/each}}
