--- a/cloud-ops-ui/app/templates/environment/application/detail/package/war.html
+++ b/cloud-ops-ui/app/templates/environment/application/detail/package/war.html
@@ -4,6 +4,7 @@
 
         <div class="col-sm-7">
             <input type="text" class="form-control" id="version" name="version">
+            <input type="hidden" class="form-control" name="applicationId" value="{{applicationId}}">
         </div>
     </div>
     <div class="form-group">
