workflow to deploy

--- a/cloud-ops-ui/app/templates/environment/application.html
+++ b/cloud-ops-ui/app/templates/environment/application.html
@@ -1,6 +1,6 @@
 <div class="page-header">
     <div class="page-title">
-        <h3>{{name}}应用管理</h3>
+        <h3>{{name}}</h3>
         <em>application management</em>
     </div>
     <div class="page-desc">
