--- a/cloud-ops-ui/app/templates/environment/application/detail/summary.html
+++ b/cloud-ops-ui/app/templates/environment/application/detail/summary.html
@@ -1,35 +1,32 @@
 <div class="form-horizontal form-static form-align-left panel-left-indent">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">基本信息
-                <a class="btn-edit fa fa-pencil pull-right" data-toggle="tooltip" title="编辑">
-                </a>
-            </h3>
+            <h3 class="panel-title">基本信息</h3>
         </div>
         <div class="panel-body">
             <div class="form-group">
-                <label class="control-label col-em-12">ID：</label>
+                <label class="control-label col-em-10">ID：</label>
 
                 <div class="col-em-offset-6">
                     <p class="form-control-static">{{topology.id}}</p>
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-em-12">名称：</label>
+                <label class="control-label col-em-10">名称：</label>
 
                 <div class="col-em-offset-6">
                     <p class="form-control-static" id="name">{{topology.name}}</p>
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-em-12">模板：</label>
+                <label class="control-label col-em-10">模板：</label>
 
                 <div class="col-em-offset-6">
                     <p class="form-control-static">{{topology.topologyName}}</p>
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-em-12">创建时间：</label>
+                <label class="control-label col-em-10">创建时间：</label>
 
                 <div class="col-em-offset-6">
                     <p class="form-control-static">{{topology.createdAt}}</p>
@@ -39,23 +36,28 @@
     </div>
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">主机信息
-                <a class="btn-edit fa fa-pencil pull-right" data-toggle="tooltip" title="编辑">
-                </a>
-            </h3>
+            <h3 class="panel-title">主机信息</h3>
         </div>
         <div class="panel-body">
             {{each topology.nodes as node}}
             {{if node.type == "tosca.nodes.Compute.Local"}}
-            <div class="form-group">
-                <label class="control-label col-em-12">{{node.name}}主机：</label>
+            <div class="form-inline">
+                <div class="form-group">
+                    <label class="control-label col-em-10">{{node.name}}主机：</label>
 
-                <div class="col-em-offset-6">
-                    <p class="form-control-static">
-                        {{each node.attributes.hosts as ip i}}
-                        {{if i>1}}&nbsp;&nbsp;{{/if}}{{ip}}
-                        {{/each}}
-                    </p>
+                        <p class="form-control-static">
+                            {{each node.attributes.hosts as ip i}}
+                            {{if i>1}}&nbsp;&nbsp;{{/if}}{{ip}}
+                            {{/each}}
+                        </p>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-em-offset-6">用户名: </label>
+                    <p class="form-control-static">{{node.attributes.user}}</p>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-em-offset-6">密码: </label>
+                    <p class="form-control-static">{{#pwdHtml(node.attributes.password)}}</p>
                 </div>
             </div>
             {{/if}}
@@ -66,25 +68,21 @@
     {{if node.type.indexOf("tosca.nodes.deploy")>=0}}
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">{{node.name}}配置信息
-                <a class="btn-edit fa fa-pencil pull-right" data-toggle="tooltip" title="编辑">
-                </a>
-            </h3>
+            <h3 class="panel-title">{{node.name}}配置信息</h3>
         </div>
         <div class="panel-body">
             {{each node.attributes as attr key}}
             <div class="form-group">
                 <label class="control-label col-em-12">{{key}}：</label>
                 <div class="col-em-offset-6">
-                    <span class="form-control-static">{{attr}}</span>&nbsp;
-                    <a data-node="{{node.name}}" data-key="{{key}}" data-value="{{attr}}" class="glyphicon glyphicon-edit edit-attr"
-                       data-toggle="popover" title="{{key}}" data-content='
-                       <form class="form-inline">
+                    <span class="form-control-static {{node.name+key}}">{{attr}}</span>&nbsp;
+                    <a  class="glyphicon glyphicon-edit form-control-static" data-toggle="popover" data-trigger="click"  data-node="{{node.name}}" data-key="{{key}}" title="{{key}}" data-content='
+                       <div class="form-inline">
                            <div class="form-group">
-                               <input type="text" class="form-control input-sm" value="{{attr}}" style="padding-right: 24px;">
-                               <button type="submit" class="btn btn-primary btn-sm editable-submit"><i class="glyphicon glyphicon-ok"></i></button>
+                               <input type="text" name="attr" class="form-control input-sm input-attr" data-node="{{node.name}}" data-key="{{key}}" style="padding-right: 24px;">
+                               <button data-node="{{node.name}}" data-key="{{key}}" class="btn btn-primary btn-sm btn-attr"><i class="glyphicon glyphicon-ok"></i></button>
                            </div>
-                       </form>
+                       </div>
                        '>
 
                     </a>
