--- a/cloud-ops-ui/app/templates/environment/application/detail/package.html
+++ b/cloud-ops-ui/app/templates/environment/application/detail/package.html
@@ -2,10 +2,11 @@
     <div class="table-top clearfix">
         <div class="pull-left">
             <a class="btn btn-reload"></a>
+            <a class="btn btn-add">新增</a>
             <a class="btn btn-primary btn-config"><i class="fa fa-code-fork"></i>Git配置</a>
-            <a class="btn btn-primary btn-git"><i class="fa fa-long-arrow-down"></i>Git打包</a>
-            <a class="btn btn-primary btn-upload"><i class="glyphicon glyphicon-upload"></i>上传</a>
-            <a class="btn btn-primary btn-patch"><i class="fa fa-files-o"></i>War包比对</a>
+            <!--<a class="btn btn-primary btn-git"><i class="fa fa-long-arrow-down"></i>Git打包</a>-->
+            <!--<a class="btn btn-primary btn-upload"><i class="glyphicon glyphicon-upload"></i>上传</a>-->
+            <!--<a class="btn btn-primary btn-patch"><i class="fa fa-files-o"></i>War包比对</a>-->
         </div>
         <div class="pull-right">
             <label>
