support package war for production environment

--- a/cloud-ops-rest-api/src/main/webapp/app/templates/login.html
+++ b/cloud-ops-rest-api/src/main/webapp/app/templates/login.html
@@ -10,7 +10,7 @@
             <div class="login-bg-banner"></div>
             <div class="login-box">
                 <div class="login-box-layer"></div>
-                <form class="login-form form-horizontal" id="login-form" method="post" role="form" action="login">
+                <form class="login-form form-horizontal" id="login-form" method="post" role="form" action="v1/login">
                     <!-- fix chrome browser ignoring 'autocomplete="off"' -->
                     <input class="hide"/>
                     <div class="input-group">
