--- a/cloud-ops-rest-api/src/main/webapp/app/templates/sysmanagement/permission/add.html
+++ b/cloud-ops-rest-api/src/main/webapp/app/templates/sysmanagement/permission/add.html
@@ -1,8 +1,8 @@
 <form class="form-horizontal">
     <div class="form-group form-required">
-        <label for="name" class="control-label col-sm-3">账号：</label>
+        <label for="username" class="control-label col-sm-3">名称：</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" id="name" name="name">
+            <input type="text" class="form-control" id="username" name="username">
         </div>
     </div>
     <div class="form-group form-required">
@@ -18,36 +18,15 @@
         </div>
     </div>
     <div class="form-group form-required">
-        <label class="control-label col-sm-3">状态：</label>
+        <label class="control-label col-sm-3">角色：</label>
         <div class="col-sm-8">
-            <select class="form-control select" name="status" >
-                <option value="locked">锁定</option>
-            </select>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-sm-3">手机号：</label>
-        <div class="col-sm-8">
-            <input type="text" class="form-control" name="phone">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-sm-3">邮箱：</label>
-        <div class="col-sm-8">
-            <input type="text" class="form-control" name="email">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-sm-3">姓名：</label>
-        <div class="col-sm-8">
-            <input type="text" class="form-control" name="trueName">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-sm-3">所属部门：</label>
-        <div class="col-sm-8">
-            <input type="hidden" name="organId">
-            <input type="text" class="form-control" name="organName">
+            <div class="checkbox">
+                {{each roles as role}}
+                <label>
+                    <input type="checkbox" name="role" value="{{role}}"/>{{role}}&nbsp;
+                </label>
+                {{/each}}
+            </div>
         </div>
     </div>
 </form>
