--- a/cloud-ops-rest-api/src/main/webapp/app/templates/sysmanagement/logs.html
+++ b/cloud-ops-rest-api/src/main/webapp/app/templates/sysmanagement/logs.html
@@ -19,12 +19,12 @@
             <th>
                 <label><input type="checkbox" class="selectAll"></label>
             </th>
-            <th>对象ID</th>
-            <th>对象类型</th>
-            <th>用户IP</th>
-            <th>操作类型</th>
+            <th>操作人</th>
+            <th>请求方法</th>
+            <th>请求路径</th>
+            <th>结果</th>
+            <th>IP地址</th>
             <th>操作时间</th>
-            <th>操作参数</th>
         </tr>
         </thead>
     </table>
