--- a/cloud-ops-rest-api/src/main/webapp/app/templates/layouts/default.html
+++ b/cloud-ops-rest-api/src/main/webapp/app/templates/layouts/default.html
@@ -77,7 +77,7 @@
                 </a>
             </li>-->
 
-            <li index="7">
+            <li index="7" id="sysmanagement-li">
                 <a class="nav-first-level" href="javascript:;">
                     <i class="fa fa-cogs"></i>系统管理<i class="fa icon-arrow"></i>
                 </a>
@@ -89,7 +89,7 @@
                     </li>
                     <li index="72">
                         <a href="{{getUrl('/sysmanagement/logs')}}" data-reload="true">
-                            <i class="fa fa-dot fa-w"></i>操作日志
+                            <i class="fa fa-dot fa-w"></i>审计日志
                         </a>
                     </li>
                 </ul>
