--- a/cloud-ops-rest-api/src/main/webapp/app/templates/sysmanagement/logs.html
+++ b/cloud-ops-rest-api/src/main/webapp/app/templates/sysmanagement/logs.html
@@ -1,10 +1,10 @@
 <div class="page-header">
     <div class="page-title">
-        <h3>日志管理</h3>
-        <em>Log management</em>
+        <h3>审计日志</h3>
+        <em>Audit Log</em>
     </div>
     <div class="page-desc">
-        <p></p>
+        <p>对用户的操作日志进行审计查看</p>
     </div>
 </div>
 <div class="page-body">
