--- a/cloud-ops-rest-api/src/main/webapp/app/templates/environment/application/detail/summary.html
+++ b/cloud-ops-rest-api/src/main/webapp/app/templates/environment/application/detail/summary.html
@@ -45,7 +45,7 @@
                 <div class="form-group">
                     <label class="control-label col-em-10">{{node.name}}主机：</label>
 
-                        <p class="form-control-static">
+                        <p class="form-control-static {{node.name+'hosts'}}">
                             {{each node.attributes.hosts as ip i}}
                             {{if i>1}}&nbsp;&nbsp;{{/if}}{{ip}}
                             {{/each}}
@@ -53,11 +53,29 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label col-em-offset-6">用户名: </label>
-                    <p class="form-control-static">{{node.attributes.user}}</p>
+                    <p class="form-control-static {{node.name+'user'}}">{{node.attributes.user}}</p>&nbsp;
+                    <a  class="glyphicon glyphicon-edit form-control-static" data-toggle="popover" data-trigger="click"  data-node="{{node.name}}" data-key="user" title="用户名" data-content='
+                       <div class="form-inline">
+                           <div class="form-group">
+                               <input type="text" name="attr" class="form-control input-sm input-attr" data-node="{{node.name}}" data-key="user" style="padding-right: 24px;">
+                               <button data-node="{{node.name}}" data-key="user" class="btn btn-primary btn-sm btn-attr"><i class="glyphicon glyphicon-ok"></i></button>
+                           </div>
+                       </div>
+                       '>
+                    </a>
                 </div>
                 <div class="form-group">
                     <label class="control-label col-em-offset-6">密码: </label>
-                    <p class="form-control-static">{{#pwdHtml(node.attributes.password)}}</p>
+                    <p class="form-control-static {{node.name+'password'}}">{{#pwdHtml(node.attributes.password)}}</p>&nbsp;
+                    <a  class="glyphicon glyphicon-edit form-control-static" data-toggle="popover" data-trigger="click"  data-node="{{node.name}}" data-key="password" title="密码" data-content='
+                       <div class="form-inline">
+                           <div class="form-group">
+                               <input type="text" name="attr" class="form-control input-sm input-attr" data-node="{{node.name}}" data-key="password" style="padding-right: 24px;">
+                               <button data-node="{{node.name}}" data-key="password" class="btn btn-primary btn-sm btn-attr"><i class="glyphicon glyphicon-ok"></i></button>
+                           </div>
+                       </div>
+                       '>
+                    </a>
                 </div>
             </div>
             {{/if}}
@@ -84,7 +102,6 @@
                            </div>
                        </div>
                        '>
-
                     </a>
                 </div>
             </div>
