--- a/cloud-ops-ui/app/templates/environment/application/detail.html
+++ b/cloud-ops-ui/app/templates/environment/application/detail.html
@@ -1,7 +1,7 @@
 <div class="page-breadcrumb">
     <ol class="breadcrumb">
         <li><a href="{{getUrl('+/../../')}}">环境管理</a></li>
-        <li><a href="{{getUrl('+/../', {'id': environmentId, 'name': environmentName})}}">应用管理</a></li>
+        <li><a href="{{getUrl('+/../', {'id': environmentId, 'name': environmentName, 'type': environmentType})}}">应用管理</a></li>
         <li class="active">{{name}}</li>
     </ol>
     <a href="{{getUrl('+/../')}}" class="btn btn-back">返回列表</a></li>
