--- a/cloud-ops-ui/app/templates/layouts/default.html
+++ b/cloud-ops-ui/app/templates/layouts/default.html
@@ -10,7 +10,7 @@
                 </ul>
             </nav>
             <nav role="navigation" index="2">
-				<span>云海IOP升级中心</span>
+				<span>中心</span>
                 <ul>
                     <li class="dropdown" index="user">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
