--- a/cloud-ops-ui/app/templates/login.html
+++ b/cloud-ops-ui/app/templates/login.html
@@ -1,7 +1,7 @@
 <div class="login-container">
     <div class="header">
         <div class="container">
-            <a class="logo" href="/">云海IOP升级中心</a>
+            <a class="logo" href="/">中心</a>
             <p class="help-block"><i class="fa fa-volume-control-phone"></i> 400-860-0011</p>
         </div>
     </div>
